# github-repo-open-issue-trends

./: .gitignore  Cargo.toml  LICENSE  README.md
queries/: OpenedAndClosedIssues.graphql
src/: main.rs  models.rs  period.rs  tsv_columns.rs  tsv_output_file.rs  utils.rs
