[package]
name = "github-repo-open-issues"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
dirs = "5.0.1"
serde = "1.0.190"
serde_json = "1.0.107"
tracing = "0.1.40"

[dependencies.octocrab]
version = "0.32.0"
default-features = false
features = ["rustls"]
# path = "../octocrab"

[dependencies.graphql_client]
version = "0.13.0"
# path = "../graphql-client/graphql_client"

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["env-filter", "fmt", "ansi"]

[dependencies.clap]
version = "4.4.7"
features = ["derive", "wrap_help"]

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["macros", "rt-multi-thread"]
